--- a/photo.html
+++ b/photo.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/src/styles.css" />
     <title>Photo</title>
   </head>
   <body>
     <h1>🥐 A picture of a croissant</h1>
     <img src="/images/Croissant.jpeg" alt="" />
+    <div class="navigation-links">
+      <a href="/">Homepage</a>
+      <a href="/photo.html">Photo</a>
+      <a href="/contact.html">Contact</a>
+    </div>
   </body>
 </html>
