--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
       To contact croissant.com, please email us at
       <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
     </p>
-    <div class="navigation-links">
+    <div>
       <a href="/">Homepage</a>
       <a href="/photo.html">Photo</a>
       <a href="/contact.html">Contact</a>
