--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       named for its historical crescent shape. Croissants and other viennoiserie
       are made of a layered yeast-leavened dough
     </p>
-    <div class="navigation-links">
+    <div>
       <a href="/">Homepage</a>
       <a href="/photo.html">Photo</a>
       <a href="/contact.html">Contact</a>
