--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="page about croissant"
+      content="This is a site about croissants"
+    />
     <link rel="stylesheet" href="/src/styles.css" />
-    <title>Croissant</title>
+    <title>Page about Croissant - croissant.com</title>
   </head>
   <body>
     <h1>🥐Croissant</h1>
@@ -13,10 +16,10 @@
       named for its historical crescent shape. Croissants and other viennoiserie
       are made of a layered yeast-leavened dough
     </p>
-    <div>
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
-    </div>
+    <footer>
+      <a href="/" title="Hompeage">Homepage</a>
+      <a href="/photo.html" title="Photo">Photo</a>
+      <a href="/contact.html" title="Contact">Contact</a>
+    </footer>
   </body>
 </html>
