--- a/photo.html
+++ b/photo.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/styles.css" />
-    <title>Photo</title>
+    <title>Photo of a croissant - croissant.com</title>
   </head>
   <body>
     <h1>🥐 A picture of a croissant</h1>
-    <img src="/images/Croissant.jpeg" alt="" />
-    <div class="navigation-links">
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
-    </div>
+    <img src="/images/Croissant.jpeg" alt="photo of a croissant" />
+
+    <footer>
+      <a href="/" title="Hompeage">Homepage</a>
+      <a href="/photo.html" title="Photo">Photo</a>
+      <a href="/contact.html" title="Contact">Contact</a>
+    </footer>
   </body>
 </html>
