--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/styles.css" />
-    <title>Contact us</title>
+    <title>Contact croissant.com for more info</title>
   </head>
   <body>
     <h1>🥐 Contact us</h1>
@@ -12,10 +12,10 @@
       To contact croissant.com, please email us at
       <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
     </p>
-    <div>
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
-    </div>
+    <footer>
+      <a href="/" title="Hompeage">Homepage</a>
+      <a href="/photo.html" title="Photo">Photo</a>
+      <a href="/contact.html" title="Contact">Contact</a>
+    </footer>
   </body>
 </html>
