--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="contact croissant.com"
+      content="Page for contact details to find more information about croissant"
+    />
     <link rel="stylesheet" href="/src/styles.css" />
     <title>Contact croissant.com for more info</title>
   </head>
