--- a/photo.html
+++ b/photo.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="photo of a croissant"
+      content="This page contains a photo of a croissant"
+    />
     <link rel="stylesheet" href="/src/styles.css" />
     <title>Photo of a croissant - croissant.com</title>
   </head>
